Fix import in lab1

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dsp_ap import *\n",
+    "from dsp_ap.signals import *\n",
     "import numpy as np"
    ]
   },
