--- a/lab5.ipynb
+++ b/lab5.ipynb
@@ -24,12 +24,14 @@
     "try:\n",
     "    import google.colab\n",
     "    import subprocess\n",
+    "    import os.path\n",
     "    p = subprocess.run(['git', 'rev-parse', '--is-inside-work-tree'], stdout=subprocess.PIPE, universal_newlines=True)\n",
-    "    if p.stdout != 'true\\n':\n",
-    "        !git clone --depth 1 -q https://github.com/jpauwels/city_dsp_ap.git\n",
-    "        %cd city_dsp_ap\n",
-    "    else:\n",
+    "    if p.stdout == 'true\\n':\n",
     "        !git pull\n",
+    "    else:\n",
+    "        if not os.path.isdir('city_dsp_ap'):\n",
+    "            !git clone --depth 1 -q https://github.com/jpauwels/city_dsp_ap.git\n",
+    "        %cd city_dsp_ap\n",
     "except:\n",
     "    %cd city_dsp_ap"
    ]
