Fix links to mp3 files to work on Colab

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -118,8 +118,8 @@
    "source": [
     "### 2. Frequency analysis in Audacity\n",
     "\n",
-    "Download the following two sweep files: [20-16000HzLin5sec.mp3](audio/20-16000HzLin5sec.mp3) and [20-16000HzExp5sec.mp3\n",
-    "](audio/20-16000HzExp5sec.mp3). Load them into Audacity (installed on the lab machines).\n",
+    "Download the following two sweep files: [20-16000HzLin5sec.mp3](https://github.com/jpauwels/city_dsp_ap/raw/master/audio/20-16000HzLin5sec.mp3) and [20-16000HzExp5sec.mp3\n",
+    "](https://github.com/jpauwels/city_dsp_ap/raw/master/audio/20-16000HzExp5sec.mp3). Load them into Audacity (installed on the lab machines).\n",
     "\n",
     "1. Switch the view to `Spectrum` and `Spectrum Log`.\n",
     "2. Describe what you see, think about what it means."
