Add Tillman's text improvements and updated Audacity instructions

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -4,15 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Module INM378/IN3031: Digital Signal Processing and Audio Programming\n",
-    "# Lab 1"
+    "# Module INM378/IN3031: Digital Signal Processing and Audio Programming\n",
+    "## Lab 1 - Getting Started with Digital Signals"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 0.  Setup dependencies"
+    "### 0.  Setting up dependencies \n",
+    "This step is for installing the latest version of the dsp_ap library code from GitHub."
    ]
   },
   {
@@ -37,6 +38,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After installation we can import the `dsp_ap.signals` package and `numpy`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -52,7 +60,13 @@
    "source": [
     "### 1. Making a sound\n",
     "\n",
-    "Execute the code snippet below and listen to the result. Change the frequency and amplitude of the sinusoid and listen to it again."
+    "The code snippet generates a sinusoid (a sine-like wave). \n",
+    "We first define the paramters frequency, amplitude, and sample rate, and then create an array of time points for the samples. \n",
+    "Then we generate the samples (`samples1`) and then create an `AudioSignal` object (this is a class from the `dsp_ap package`). `AudioSingal` generates playable audio, that you then can listen to. \n",
+    "\n",
+    "If it works, change the frequency and amplitude values, regenerate the signal by executing the cell again, and listen to it again. \n",
+    "\n",
+    "Why is the `AudioSignal` sample rate information needed for the playback?"
    ]
   },
   {
@@ -61,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "freq1 = 500 # freq in Hz\n",
+    "freq1 = 400 # freq in Hz\n",
     "amp1 = 0.5 # amplitude factor \n",
     "samplerate = 44100 # % sample rate in Hz\n",
     "duration = 0.8 # sound duration in seconds\n",
@@ -74,7 +88,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create another sinusoid with twice the frequency (using a new variable `samples2`) and listen to it."
+    "Now, create another sinusoid with twice the frequency (using a new variable `samples2`). \n",
+    "You only need a new frequency value, you can reuse the amplitude and sample rate variables. \n",
+    "Then listen to the new sound and compare it to the previous."
    ]
   },
   {
@@ -88,7 +104,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Produce a mixed signal by adding the two sinusoids together and listen to the result."
+    "Now, produce a mixed signal by adding the two sinusoids together. \n",
+    "For this, you can just use `+` on the sample arrays, like you would for individual numbers. \n",
+    "\n",
+    "Again, listen to the result. They should blend very well, and sound similar to the first signal (`samples1`)."
    ]
   },
   {
@@ -102,7 +121,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change the amplitude of the additional sinusoid (using a new variable `amp2`) and listen to it again and to the mix."
+    "Finally, change the amplitude of the additional sinusoid (using a new variable `amp2`) and listen to the result.  \n",
+    "\n",
+    "Now listen to the new mix and compare to the version above. You can notice a - relatively subtle - change in the timbre (tone 'quality' or 'colour')."
    ]
   },
   {
@@ -121,7 +142,7 @@
     "Download the following two sweep files: [20-16000HzLin5sec.mp3](https://github.com/jpauwels/city_dsp_ap/raw/master/audio/20-16000HzLin5sec.mp3) and [20-16000HzExp5sec.mp3\n",
     "](https://github.com/jpauwels/city_dsp_ap/raw/master/audio/20-16000HzExp5sec.mp3). Load them into Audacity (installed on the lab machines).\n",
     "\n",
-    "1. Switch the view to `Spectrum` and `Spectrum Log`.\n",
+    "1. Analyse the frequencies in the signal (Menu: `Analyze` -> `Plot Spectrum...`). Flip the axis between `Linear frequency` and `Log frequency`.\n",
     "2. Describe what you see, think about what it means."
    ]
   },
@@ -160,7 +181,7 @@
     "Try changing the sine frequency and sampling frequency in the first snippet (replicated below for convenience).\n",
     "\n",
     "1. Reduce the sampling frequency to 8000 Hz and listen to the output. Is there any difference?\n",
-    "2. With 8000 Hz sampling frequency, increase the sine tone frequency in steps of 500 Hz until 5000 Hz and listen to the output at each step. Try to interpret what you hear."
+    "2. With 8000 Hz sampling frequency, increase the sine tone frequency in steps of 1000 Hz until 5500 Hz and listen to the output at each step. Try to interpret what you hear."
    ]
   },
   {
@@ -169,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "freq1 = 500 # freq in Hz\n",
+    "freq1 = 400 # freq in Hz\n",
     "amp1 = 0.5 # amplitude factor \n",
     "samplerate = 44100 # % sample rate in Hz\n",
     "duration = 0.8 # sound duration in seconds\n",
