Update lab1 with plots

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -81,7 +81,9 @@
     "duration = 0.8 # sound duration in seconds\n",
     "timepoints = np.arange(samplerate * duration) / samplerate\n",
     "samples1 = amp1 * np.sin(2 * np.pi * freq1 * timepoints) # samples vector\n",
-    "AudioSignal(samples1, samplerate).play()"
+    "signal1 = AudioSignal(samples1, samplerate)\n",
+    "signal1.play()\n",
+    "signal1.display(x_range=(0, 0.05))"
    ]
   },
   {
@@ -143,7 +145,7 @@
     "](https://github.com/jpauwels/city_dsp_ap/raw/master/audio/20-16000HzExp5sec.mp3). Load them into Audacity (installed on the lab machines).\n",
     "\n",
     "1. Analyse the frequencies in the signal (Menu: `Analyze` -> `Plot Spectrum...`). Flip the axis between `Linear frequency` and `Log frequency`.\n",
-    "2. Describe what you see, think about what it means."
+    "2. Describe what you see, and think about what it means."
    ]
   },
   {
@@ -196,7 +198,9 @@
     "duration = 0.8 # sound duration in seconds\n",
     "timepoints = np.arange(samplerate * duration) / samplerate\n",
     "samples1 = amp1 * np.sin(2 * np.pi * freq1 * timepoints) # samples vector\n",
-    "AudioSignal(samples1, samplerate).play()"
+    "signal1 = AudioSignal(samples1, samplerate)\n",
+    "signal1.play()\n",
+    "signal1.display(x_range=(0, 0.05))"
    ]
   },
   {
