Add placeholder comments to code cells

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -100,7 +100,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,7 +119,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,7 +137,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -215,7 +221,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "code",
