Add Tillman's textual improvements plus some minor fixes

--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "### 0.  Setting up dependencies \n",
-    "This step is for installing the latest version of the dsp_ap library code from GitHub."
+    "This step is for installing the latest version of the dsp_ap library code from GitHub - the same as last week."
    ]
   },
   {
@@ -25,12 +25,14 @@
     "try:\n",
     "    import google.colab\n",
     "    import subprocess\n",
+    "    import os.path\n",
     "    p = subprocess.run(['git', 'rev-parse', '--is-inside-work-tree'], stdout=subprocess.PIPE, universal_newlines=True)\n",
-    "    if p.stdout != 'true\\n':\n",
-    "        !git clone --depth 1 -q https://github.com/jpauwels/city_dsp_ap.git\n",
-    "        %cd city_dsp_ap\n",
-    "    else:\n",
+    "    if p.stdout == 'true\\n':\n",
     "        !git pull\n",
+    "    else:\n",
+    "        if not os.path.isdir('city_dsp_ap'):\n",
+    "            !git clone --depth 1 -q https://github.com/jpauwels/city_dsp_ap.git\n",
+    "        %cd city_dsp_ap\n",
     "except:\n",
     "    %cd city_dsp_ap"
    ]
@@ -39,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After installation we can import some helper classes from the `dsp_ap.signals` package and `numpy`."
+    "After installation we can import some helper classes and functions from the `dsp_ap` module, `numpy` and `scipy.signal`."
    ]
   },
   {
@@ -91,7 +93,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,17 +103,17 @@
    "source": [
     "### 2. Waveform shapes\n",
     "\n",
-    "So far, we've only generated sine waves, which consist of just a single frequency component. Now we're going to have a look at some other, commonly used waveforms in audio, namely:\n",
+    "So far, we've only generated **sine** waves, which consist of just a **single frequency component**. Now we're going to have a look at some other, commonly used waveforms in audio, namely:\n",
     "\n",
-    "1. rectangular or square waves\n",
-    "2. triangular waves\n",
-    "3. sawtooth waves\n",
+    "1. **rectangular** or **square** waves\n",
+    "2. **triangular** waves\n",
+    "3. **sawtooth** waves\n",
     "\n",
-    "All of these contain multiple frequency components, infinitely many even according to their mathematical definition (of course not in practice). \n",
+    "All of these contain multiple frequency components, infinitely many even according to their mathematical definition.\n",
     "\n",
-    "We are going to use the [`signal`](https://docs.scipy.org/doc/scipy/reference/signal.html#waveforms) module from the [`scipy`](https://scipy.org/) library to help us generate these waveforms. This module has already been imported into our namespace as `signal` so be careful to not overwrite it by naming one of your variables `signal`. If you still happen to do this, just execute the cell with the `import` statements at the top of this notebook again.\n",
+    "We are going to use the [`signal`](https://docs.scipy.org/doc/scipy/reference/signal.html#waveforms) module from the [`scipy`](https://scipy.org/) library to help us generate these waveforms. This module has **already been imported** into our namespace as `signal` so be careful to **not overwrite** it by naming one of your variables `signal`. If you still happen to do this, just execute the cell with the `import` statements at the top of this notebook again.\n",
     "\n",
-    "More specifically, take a look at the help for [`signal.square`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.square.html) (for square waves) and [`signal.sawtooth`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.sawtooth.html) (both for triangular and sawtooth waves) to learn how to generate these waveforms. Plot them and their spectra and listen to their sound. Below you can find some common parameters and an example for a sine wave to get you started."
+    "More specifically, take a look at the **help** for [`signal.square`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.square.html) (for square waves) and [`signal.sawtooth`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.sawtooth.html) (both for triangular and sawtooth waves) to learn how to generate these waveforms. We now plot them and their spectra and listen to their sound. Below you can find some common parameters and an example for a sine wave to get you started."
    ]
   },
   {
@@ -163,7 +167,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,7 +183,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,7 +199,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,7 +209,9 @@
    "source": [
     "### 3. Applying an ADSR envelope\n",
     "\n",
-    "Natural sounds evolve over time, unlike the perfectly periodic waveforms we've been generating so far. A natural signal typically has an impulsive start, takes some time to settle and finally fades out. We can approximate this by applying an ADSR (attack-decay-sustain-release) curve (an _envelope_) to the gain (amplitude) of a signal. This curve is defined by its four sections, which are completely defined by the maximum amplitude (which gets reached at the end of the attack), the sustain amplitude and the duration of attack, decay and release. The sustain simply lasts for as long as needed to achieve the requested signal duration.\n",
+    "Natural **sounds evolve over time**, unlike the perfectly periodic waveforms we've been generating so far. A natural signal typically has an impulsive **start**, takes some time to **settle** and finally **fades** out. We can approximate this by applying an **ADSR (attack-decay-sustain-release)** curve as a so-called **_envelope_** to the gain (amplitude) of a signal. \n",
+    "\n",
+    "The **ADSR** curve is **defined** by its four sections, which are completely defined by the maximum amplitude (which gets reached at the end of the attack and is not a parameter of the ADSR curve), the **sustain amplitude** and the **duration of attack, decay and release**. The sustain simply lasts for as long as needed to achieve the requested **signal duration** or in case of real-time processing, until a command to end the sustain phase is received, e.g. when a key is released. \n",
     "\n",
     "Below you can find an example of an ADSR curve applied to a sine wave. Listen to it and try applying the same envelope to the other waveform shapes you created above."
    ]
@@ -243,7 +255,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -251,11 +265,13 @@
    "source": [
     "### 4. Amplitude modulation\n",
     "\n",
-    "Applying an ADSR envelope is just one way of controlling the gain of a signal. We can even modify the gain of a signal with another periodic signal. We call this technique _amplitude modulation (AM)_, which you might recognise from analogue radios. It was in fact the first technique used to transmit audio by radio waves.\n",
+    "Applying an ADSR envelope is just one way of controlling the gain of a signal. We can even **modify** the gain of a **signal with another periodic signal**. We call this technique **_amplitude modulation (AM)_**, which you might recognise from analogue radios. It was in fact the first technique used to transmit audio by radio waves.\n",
     "\n",
-    "In digital signal processing, we can achieve this effect by multiplying the samples of a base signal (the _carrier_) elementwise by the samples of another signal of the same length (the _modulator_). You can simply use the `*` operator for this.\n",
+    "In digital signal processing, we can achieve this effect by **multiplying** the samples of a base signal (the **_carrier_**) elementwise by the samples of another signal of the same length (the **_modulator_**). You can simply use the **`*` operator** for this.\n",
     "\n",
-    "Below you can find the code for a carrier sine wave of $500 Hz$. Create a modulator sine wave of $3 Hz$ and multiply them together to get an amplitude-modulate waveform. Plot the waveform and listen to it. Try changing the amplitude, frequency and shape of either wave. The frequency of the modulator is typically orders of magnitude smaller than the frequency of the carrier, below the limits of hearing, so don't worry if you can't hear the modulator in itself, only its effect on the carrier."
+    "Below you can find the code for a carrier sine wave of $500 Hz$. Create a modulator sine wave of $3 Hz$ and multiply them to get an amplitude-modulate waveform. Plot the waveform and listen to it. Try changing the amplitude, frequency and shape of either wave. \n",
+    "\n",
+    "The frequency of the modulator is typically orders of magnitude smaller than the frequency of the carrier and below the limits of hearing. So, don't worry if you can't hear the modulator in itself, only its effect on the carrier."
    ]
   },
   {
@@ -309,7 +325,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -323,7 +341,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -331,11 +351,11 @@
    "source": [
     "### 5. Resampling\n",
     "\n",
-    "Changing the samplerate $f_s$ of a signal (called _resampling_) also changes the Nyquist frequency $f_{\\mathrm{Nyq}} = \\dfrac{f_s}{2}$ of that signal. When downsampling (meaning that the new samplerate is lower than the old samplerate), a consequence is that the signal might now contain frequency components that can no longer be represented correctly (i.e. all frequencies higher than $f_{\\mathrm{Nyq}}$). Aliassing will cause all these frequencies higher than the Nyquist frequency to be reflected into the downsampled spectrum, which is clearly undesirable.\n",
+    "**Changing the samplerate** $f_s$ of a signal (called **_resampling_**) also changes the Nyquist frequency $f_{\\mathrm{Nyq}} = \\dfrac{f_s}{2}$ of that signal. When **downsampling** (meaning that the new samplerate is lower than the old samplerate), a consequence is that the signal might now contain frequency components that can no longer be represented correctly (i.e., all frequencies higher than $f_{\\mathrm{Nyq}}$). **Aliasing** will cause all these frequencies higher than the Nyquist frequency to be **reflected into the downsampled spectrum**, which is clearly undesirable.\n",
     "\n",
-    "To avoid this, resampling algorithms apply a lowpass filter to remove everything below the new Nyquist frequency before performing the actual downsampling. By removing the unrepresentable frequencies in this way, we ensure that they do not alias into the new spectrum.\n",
+    "To avoid this, it helps to **apply a lowpass filter** to remove everything below the new Nyquist frequency before performing the actual downsampling. By removing the unrepresentable frequencies, we ensure that they do not alias into the new spectrum. This is called **anti-alias filtering**.\n",
     "\n",
-    "A straightforward downsampling algorithm for integer downsampling factors is available as [`signal.decimate`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.decimate.html). Its parameter `n` controls the downsampling filter. Try passing a value of $0$ to switch the filtering off and see what happens, by plotting the spectrum and listening to the result. Use `ftype='fir'` to select a FIR filter. Then resample again with the lowpass filtering on (use `n=None` for a sensible default value) and compare with the previous plot and sound. Repeat the whole process with a signal frequency that falls below the new Nyquist frequency and see what happens."
+    "A straightforward downsampling method for integer downsampling factors is available as [`signal.decimate`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.decimate.html). Its **parameter `n`** controls the **anti-aliasing** filter. Try passing a value of **$0$** to switch the filtering off and see what happens, by plotting the spectrum and listening to the result. Use `ftype='fir'` to select a FIR filter (we will explain this in a later session). Then, resample again with the lowpass filtering on (use `n=None` for a sensible default value) and compare with the previous plot and sound. Repeat the whole process with a signal frequency that falls below the new Nyquist frequency and see what happens."
    ]
   },
   {
@@ -368,14 +388,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -383,9 +407,9 @@
    "source": [
     "### 6. Amplitude quantisation\n",
     "\n",
-    "Not just the time axis of digital signals is quantised, the amplitude axis is also limited in the number of different values it can represent. This is indicated by the bit-depth, where a bit-depth of 16 means that the signal's amplitude has $2^{16} = 65,536$ possible values.\n",
+    "Not just the **time axis** of digital signals is quantised, the **amplitude axis** is also limited in the number of different values it can represent, i.e. it is also **quantised**. The level of quantisation is indicated by the **bit-depth**, where a bit-depth of 16 means that the signal's amplitude has $2^{16} = 65,536$ possible values.\n",
     "\n",
-    "Sixteen bits give enough precision for the quantisation noise to be inaudible. Quantisation noise is digital noise that arises from the difference between real and quantised waveforms. Lowering the bit-depth will make the digital noise become audible.\n",
+    "Sixteen bits give enough precision for the **quantisation noise** to be inaudible. Quantisation noise is digital noise that arises from the difference between real and quantised waveforms. Lowering the bit-depth will make the digital noise become audible.\n",
     "\n",
     "Try out quantisation by using the function `quantise(signal, sample_depth)` on some of the signals created above. The result will be a new `AudioSignal`, so you can just call its `play()` method to play it back (as done above). First try quantising to 16 bit and verify there is no audible difference (although our computer representation of the samples uses 64 bits, so the quantisation applied is already quite significant). Then lower the quantisation even further. The sound of the noise depends on the signal, so try playing with waveform shape and frequency."
    ]
@@ -395,7 +419,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -403,12 +429,12 @@
    "source": [
     "### 7. A real-world example of data size\n",
     "\n",
-    "The CD standard is defined as having a sampling rate of 44100 Hz, a bit-depth of 16, and 2 channels. How much data does it need \n",
+    "The **CD standard** - which most consumer audio still follows, even if not stored on a physical disc - specifies a **sampling rate** of **44,100 Hz**, a **bit-depth** of **16**, and **2 channels (stereo)**. How much data does it need \n",
     "1. per second?\n",
     "2. per minute?\n",
     "3. per hour?\n",
     "\n",
-    "How much space is needed for the sound data of a CD (74 min). What levels of dynamics do 8, 16, 24 bit systems reproduce?"
+    "**How much space** is needed for the sound data of a standard CD (74 min). What levels of **dynamics** do 8, 16, and 24 bit systems reproduce?"
    ]
   },
   {
@@ -424,7 +450,7 @@
    "source": [
     "### 8. Square waves in practice\n",
     "\n",
-    "The square wave as a mathematical function has an infinite series of relatively strong overtones. You may have noticed that the rectangular waves sound a bit rough when we play them on our computers. What is the reason? Could a low-pass filter applied to the generated signal help? Why could or could it not?  "
+    "The square wave as a mathematical function has an **infinite series** of relatively strong **harmonics**. You may have noticed that the rectangular waves sound a bit rough when we play them on our computers. What is the reason? Could a **low-pass filter** applied to the generated signal **help**? **Why could or could it not?**"
    ]
   },
   {
