--- a/lab5.ipynb
+++ b/lab5.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Module INM378/IN3031: Digital Signal Processing and Audio Programming\n",
-    "# Lab 5"
+    "# Module INM378/IN3031: Digital Signal Processing and Audio Programming\n",
+    "## Lab 5 - More Filtering"
    ]
   },
   {
@@ -44,7 +44,10 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy import signal"
+    "from scipy import signal\n",
+    "import pickle as pkl\n",
+    "from scipy.io import wavfile\n",
+    "from IPython.display import Audio"
    ]
   },
   {
@@ -53,16 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams['figure.figsize'] = (13,8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.rcParams['figure.figsize']"
+    "plt.rcParams['figure.figsize'] = (13,6) # increase the default size of the plots"
    ]
   },
   {
@@ -79,7 +73,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,7 +99,7 @@
    "source": [
     "#### 2.1. Step one\n",
     "\n",
-    "[Unpickle](https://docs.python.org/3.7/library/pickle.html) the data. What is its sampling frequency? How many minutes are recorded?"
+    "[Unpickle](https://docs.python.org/3.7/library/pickle.html) the data (using [`pickle.load`](https://docs.python.org/3.7/library/pickle.html#pickle.load) on a file object). What is its sampling frequency? How many minutes are recorded?"
    ]
   },
   {
@@ -111,7 +107,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,7 +134,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -164,9 +164,10 @@
     "    fig = plt.figure()\n",
     "    timepoints = np.arange(len(before_signal)) / samplerate\n",
     "    plt.plot(timepoints, before_signal, 'b', timepoints, after_signal, 'g')\n",
+    "    plt.title('Signal before and after filtering')\n",
     "    plt.xlabel('time [s]')\n",
     "    plt.ylabel('amplitude')\n",
-    "    plt.legend(['before', 'after'])\n",
+    "    plt.legend(['before', 'after'], loc='upper right')\n",
     "    plt.show()"
    ]
   },
@@ -175,7 +176,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,7 +196,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -201,7 +206,7 @@
    "source": [
     "### 3. Filtering audio signals\n",
     "\n",
-    "Use the same `firls` and `iirdesign` functions as in the previous questions to create high pass and low pass filters and apply them to an audio signal, (e.g. the `audio/carrier.wav` file used in lab 4). Verify your filter effects by listening and by plotting spectrograms."
+    "Use the same `firls` and `iirdesign` functions as in the previous questions to create high pass and low pass filters and apply them to an audio signal, (e.g. the `audio/carrier.wav` file used in lab 4). Verify your filter effects by listening (using `display(Audio(<samples>, rate=<samplerate>))`, as in last session) and by plotting spectrograms (using your function `plot_spectrogram`)."
    ]
   },
   {
@@ -209,7 +214,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# write your code here"
+   ]
   },
   {
    "cell_type": "code",
